# roboforex

./: README.md  pyproject.toml
bdd/features/: login.feature
bdd/steps/: login_steps.py
src/roboforex/ui/pages/: base_page.py  login_page.py  trading_page.py
tests/: test_login.py
