[project]
name = "roboforex"
version = "0.1.0"
description = "Example UI test repository for stockstrader.roboforex.com"
authors = [
    {name = "Albert Safin",email = "albert_saf1n@vk.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest (>=8.4.1,<9.0.0)",
    "pytest-bdd (>=8.1.0,<9.0.0)",
    "playwright (>=1.54.0,<2.0.0)",
    "pytest-playwright (>=0.7.0,<0.8.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
bdd_features_base_dir = "bdd/features"
